--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
   },
