--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "passport-linkedin-oauth2": "^2.0.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
