--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "nodemon --experimental-modules server-side/server.mjs"
+    "start": "nodemon --experimental-modules server-side/server.mjs",
+    "start:dev": "nodemon --experimental-modules server-side/server.mjs -m dev",
+    "start:prod": "node --experimental-modules server-side/server.mjs -m prod"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "commander": "^12.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
